--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,98 @@
 </table>
 
 		<div class="commit sansserif">
+			<h2 class="date">26 September 2020</h2>
+			<h3 class="author">jammer312 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Портировал с ТГ отдельное окно с ролями в конце раунда.</li>
+				<li class="rscadd">Добавил теги центрирования в бумагу ([left] [/left] и [right] [/right]).</li>
+				<li class="rscadd">Добавил тег завершения [end] в бумагу, который после применения убирает [field], в которое он прописан.</li>
+				<li class="rscadd">
+					<b>Реализовал механику автоджоббана по жалобам АВД.</b><br>
+					<br>
+					Теперь через факс АВД может распечатать пачку жалоб, особый предмет, который содержит главную жалобу и может спавнить и содержать в себе дополнительные формы-подтверждения.
+					Заполненная жалоба с достаточным количеством собранных подтверждений от других сотрудников станции может быть отправлена на ЦК и, если она заполнена правильно, игрок на персонажа которого она
+					была написана может получить джоббан на свою профессию. Джоббан накладывается если подтвержден педалями или же на АВД играет опытный игрок, опытность которого ранее отмечена педалями.
+				</li>
+				<li class="bugfix">Исправил экзамайн коллекторов и фейковой внешности персонажей.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил возможность редактировать у ID-карт любую информацию, которая на ней отображается (ДНК, отпечатки, возраст, фотографию).</li>
+				<li class="rscadd">Добавил кнопку для автоматической печати всех данных из личного дела сотрудника на его ID-карту.</li>
+				<li class="rscadd">Добавил возможность вместо удаленных органов вшивать в человека различные предметы.</li>
+				<li class="tweak">Выпилил авторевайв генокрада в стазисе. Теперь чтобы выйти из стазиса надо самому прожать "Regenerative Stasis (20)".</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Удален один из четырех диванов в инженерке.</li>
+				<li class="maptweak">Удален не подсоединенный ни к чему кусок трубы посреди медблока.</li>
+				<li class="maptweak">Добавлена новая камера в прибытие.</li>
+				<li class="maptweak">Слегка переделана общая гидропоника.</li>
+				<li class="maptweak">Возвращены костюм курицы и киборг-визор на нижний уровень.</li>
+				<li class="maptweak">Пофикшена мусорка на верхнем уровне гидропоники..</li>
+				<li class="maptweak">Пофикшен ковер в гетто-баре.</li>
+				<li class="maptweak">Пофикшен мусоросброс на нижнем уровне, бластдур заменен пластик флапсами.</li>
+				<li class="maptweak">У мусорок на нижнем уровне научки теперь отдельный смыв прямиком в космос.</li>
+			</ul>
+
+			<h3 class="author">HentaiStorm updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил рецепт кваса (Beer + Sugar (один к одному) + катализатор в виде 5 Enzyme).</li>
+				<li class="bugfix">Исправил серьезную ошибку у блоба, которая вызывала лаги и, вероятно, крашила сервер.</li>
+				<li class="bugfix">Починил дубинку стандартному боту, которую тот не мог заряжать.</li>
+				<li class="bugfix">Пофиксил задачу трейтора на 10-минутный арест. Теперь она должна нормально засчитываться.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил ограничение для магов на фарм поинтов спеллбука вне станции. Теперь получать поинты можно только на станции.</li>
+				<li class="tweak">Обновил названия серверов сверху игрового окна.</li>
+				<li class="tweak">Вернул звезды в космос.</li>
+			</ul>
+
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Удалил визиторов.</li>
+			</ul>
+
+			<h3 class="author">eckff updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил сообщение при заклейке дыры в скафандре.</li>
+			</ul>
+
+			<h3 class="author">HonkyDonky updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Добавил воксам желудок. Теперь они наконец-то могут наесться.</li>
+			</ul>
+
+			<h3 class="author">kemperhun updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил телекоммы, которые не работали с продвинутым мультитулом.</li>
+			</ul>
+
+			<h3 class="author">Pos13 and MorJams updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправили баги предпочтений по ролям, в том числе убрали повторение культиста.</li>
+			</ul>
+
+			<h3 class="author">Pos13 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Выделил среди предпочтений по ролям роли, которые предлагаются гостам.</li>
+			</ul>
+
+			<h3 class="author">MorJams updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил спрайт лежащих ящеров.</li>
+			</ul>
+
+			<h3 class="author">sweden-moose updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил старый баг с кривым обновлением спрайта бомбы-однобаллонки при сборке/разборке.</li>
+			</ul>
+
 			<h2 class="date">12 September 2020</h2>
 			<h3 class="author">TapKo4eB updated:</h3>
 			<ul class="changes bgimages16">
