--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,90 @@
 </table>
 
 		<div class="commit sansserif">
+			<h2 class="date">13 October 2020</h2>
+			<h3 class="author">Andromedasss updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил новый режим вампиров с их рабами, треллами.</li>
+			</ul>
+
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена мутация мака (poppy) - опиумный мак (opium poppy). Внезапно, содержит опиум.</li>
+				<li class="rscadd">Добавлен опиум (opium). Являет собой усиленную версию трамадола, но при этом имеет более серьёзные побочные эффекты.</li>
+				<li class="rscadd">Добавлен тарин (tarine). Получается из опиума (3 opium, 1 acetone, 1 hydrochloric acid -> 3 tarine). Обезболивает сильнее оксикодона, но имеет очень серьёзные побочные эффекты.</li>
+				<li class="rscadd">Добавлена бумага для самокруток, двух видов.</li>
+				<li class="rscadd">Добавлены несколько видов табака для самокруток/трубок. Самокрутки крутятся кликом щепоткой табака по бумажке.</li>
+				<li class="rscadd">Косяки теперь можно крутить не только из каннабиса, а из любых продуктов гидропоники, но требуется предварительное засушивание. Крутятся аналогично самокруткам.</li>
+				<li class="rscadd">Старым способом (с обычной бумагой) можно скрутить большой косяк (но не самокрутку).</li>
+				<li class="rscadd">Добавлено появление дыма во время курения. Теперь можно ещё задорнее доводить медиков до истерик.</li>
+				<li class="rscadd">Добавлен компост. Являет собой слабое, но всё же достаточное для поддержания жизни растений удобрение.</li>
+				<li class="rscadd">Добавлен Mut'O'Grow - технический мутаген. Гораздо слабее "нормального", слегка токсичен для растений, но имеется у ботаников в автомате.</li>
+				<li class="tweak">Исправлено потребление реагентов при курении. Раньше реагенты потреблялись с постоянной скоростью и могли полностью выкуриться незадолго после зажигания, после чего сигарета оставалась пустой. Теперь реагенты равномерно потребляются в течение всего процесса курения.</li>
+				<li class="tweak">Исправлено "активное" курение кликами по своему персонажу. Раньше такое курение было рудиментом - не потребляло реагенты и не было видно для окружающих. Теперь оно работает корректно и показывает окружающим аналогичные эмоутам сообщения. И имеет кулдаун, ибо нехер.</li>
+				<li class="tweak">Значительно увеличена доля реагентов, усваиваемых при курении. Это зависит от вида сигарет.</li>
+				<li class="tweak">Усилен EZ Nutrient. Теперь все три "именных" удобрения имеют свои плюсы: EZ Nuntrient на 20% питательнее, Left4Zed увеличивает шанс мутаций на 20%, Robust Harvest увеличивает урожай на 20%. Для всех трёх нарисованы новые спрайты.</li>
+				<li class="tweak">Удорожён рецепт трамадола. Рецепт тот же, но производит не 3, а 1 единицу трамадола.</li>
+				<li class="bugfix">Пофикшен огонёк от сигареты, появляющийся на предметах, на которых не должен.</li>
+				<li class="bugfix">Исправил падения сервера из-за каталки.</li>
+				<li class="bugfix">Починил оверлеи крови на тонких людях.</li>
+				<li class="imageadd">Улучшены спрайты сигарет, сигар, etc.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Реворк верхних дормиториев. Основные фичи - спрятано огромное уродливое поле плейтингов, образовавшееся от гидропоники, переделаны стремные казармы-общежитие, крио больше не является ловушкой джокера при отключении света. Помимо самого реворка пофиксил все незамеченные ранее критбаги карты, вроде двойных АПЦ на шахтерке, проблемной доставки посылок и дырявых труб, а так же тот самый черный тайл без гравитации на ЦК.</li>
+				<li class="maptweak">Удалил музей ЦК потерявший свою актуальность.</li>
+			</ul>
+
+			<h3 class="author">ArmolitskiyCarpoeb updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="imageadd">Респрайтнул станревольвер.</li>
+				<li class="imageadd">Респрайтнул webley.</li>
+				<li class="imageadd">Респрайтнул egun.</li>
+				<li class="imageadd">Респрайтнул c20r.</li>
+				<li class="imageadd">Респрайтнул двустволку.</li>
+				<li class="imageadd">Респрайтнул нанопасту.</li>
+				<li class="imageadd">Респрайтнул импланты, их кейсы и имплантер.</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил сохранение цвета никнейма донатеров в OOC между раундами.</li>
+				<li class="bugfix">Пофиксил баг из-за которого специальные роли в течение игры выдавались дионам и прочим нечеловекам.</li>
+				<li class="bugfix">Исправил отображение АнтагХУДа для мидраундовых ролей.</li>
+			</ul>
+
+			<h3 class="author">HonkyDonky updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил все задания воксов: похищение, кражу и выживание. Чтобы цель засчитало необходимо чтобы цель задания находилась на базе воксов.</li>
+			</ul>
+
+			<h3 class="author">jammer312 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил копирование руны на бумагу.</li>
+				<li class="bugfix">Починил отображение иконок предметов в окне с результатами раунда.</li>
+			</ul>
+
+			<h3 class="author">pushpushmergerebase updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Немного подкрутил доступ АВД. Теперь у него есть доступ в техтоннели и к камерам.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил киборгу возможность заменять батарейки в бурах.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил отображение сообщения об устаревшей версии Бьонда при дисконнекте.</li>
+			</ul>
+
+			<h3 class="author">MrPersival updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил множество опечаток в протолате, привел название рецептов к общему виду.</li>
+			</ul>
+
 			<h2 class="date">26 September 2020</h2>
 			<h3 class="author">jammer312 updated:</h3>
 			<ul class="changes bgimages16">
