--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,45 @@
 </table>
 
 		<div class="commit sansserif">
+			<h2 class="date">1 December 2020</h2>
+			<h3 class="author">Epicus7 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Убрал скидки Черной Пятницы.</li>
+			</ul>
+
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены альфа-голиафы - они медленнее обычных, встречаются намного реже (на уровне с бехолдерами), но чутка чаще используют щупальца, бьют сильнее и имеют почти вдвое больше ХП. Вместо одной шкурки дропают сразу две, а бонусом - ещё и свой хвост, который по счастливой случайности налезает человеку на голову.</li>
+				<li class="rscadd">Добавлен хвост голиафа - космический шлем, который можно получить только через астероидное сафари. Он имеет защитные характеристики на уровне с лучшей бронёй, однако не имеет встроенного фонарика, защищает от вспышек слабее своих родственников и не полностью защищает от биологических угроз.</li>
+				<li class="imageadd">Перерисованы многие вендоматы.</li>
+				<li class="tweak">Открученные от пола автоматы теперь падают на бок.</li>
+				<li class="tweak">Pulse rifle удалён из аплинка.</li>
+				<li class="tweak">Цена на pulse carbine для нюкеров повышена с 30 до 45.</li>
+				<li class="tweak">Повысил цену на флешдарк с 28 до 65 (для триторов) и 129 (для нюки)</li>
+				<li class="tweak">Увеличил число мобов на астероиде</li>
+				<li class="tweak">Мертвых космоптероидов теперь можно разделывать на ксеномясо.</li>
+				<li class="bugfix">Исправил бесконечный лут мобов на астероиде.</li>
+				<li class="bugfix">Пофикшено закликивание вендоматов ID-картой.</li>
+				<li class="bugfix">Исправил гостам возможность читать радио-переговоры.</li>
+			</ul>
+
+			<h3 class="author">sweden-moose updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил бесконечное кружение попугаев вокруг стульев.</li>
+				<li class="bugfix">Исправил ошибочное сообщение, которое появлялось при атаке попугаев.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Исправил кабель рядом с кабинетом детектива.</li>
+				<li class="maptweak">Убрал ненужный камель рядом с помещением со SMES-ами.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил направление звуков выстрелов.</li>
+			</ul>
+
 			<h2 class="date">26 November 2020</h2>
 			<h3 class="author">jammer312 updated:</h3>
 			<ul class="changes bgimages16">
