--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,12 @@
 </table>
 
 		<div class="commit sansserif">
+			<h2 class="date">2 December 2020</h2>
+			<h3 class="author">Epicus7 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил критический баг из-за которого не работали некоторые программы в консолях.</li>
+			</ul>
+
 			<h2 class="date">1 December 2020</h2>
 			<h3 class="author">Epicus7 updated:</h3>
 			<ul class="changes bgimages16">
