--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,89 @@
 </table>
 
 		<div class="commit sansserif">
+			<h2 class="date">16 December 2020</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Карта оформлена в новогодние декорации.</li>
+			</ul>
+
+			<h3 class="author">sweden-moose updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Двери больше не будут выталкивать мобов на соседние тайлы при зажёвывании.</li>
+				<li class="rscadd">Добавлена фигурка лося.</li>
+			</ul>
+
+			<h3 class="author">Animesku updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В донатный лодаут добавлены: длинные вечерние перчатки, капитанская фуражка, карпорюкзак, наплечная сумка, три панковские куртки, пальто, прокурорское и капитанское парадное платья, парадная форма капитана, латексный костюм и фиговый лист.</li>
+			</ul>
+
+			<h3 class="author">Destrolaric updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлено прохождение через стены с помощью перил.</li>
+			</ul>
+
+			<h3 class="author">Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Теперь examine можно использовать, смотря через камеры или будучи ИИ.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен кулдаун для починки киборгов нанопастой.</li>
+				<li class="tweak">Добавлена задержка при починке киборгом самого себя нанопастой (при закрытой панели).</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Все упоминания мерков заменены на Синдикат.</li>
+			</ul>
+
+			<h3 class="author">HentaiStorm updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Снова очередная оптимизация хуманов.</li>
+			</ul>
+
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Талеры вновь переименованы в кредиты.</li>
+				<li class="tweak">Доработана оптимизации HentaiStorm'а.</li>
+				<li class="imageadd">Перерисованы APC, кнопки, сенсоры-кнопки-панельки для работы с воздушными шлюзами и терминалы.</li>
+				<li class="tweak">Шанс разрыва артерии при получении урона уменьшен в 2 раза.</li>
+				<li class="tweak">Исправлено отрывание конечностей при достижении порога урона. Теперь бёрн их сжигает, а острые предметы - отрезают, от брута с шансом в 25% конечность оторвётся, иначе гиббнется.</li>
+				<li class="tweak">Переработана механика урона от выстрелов. Подробнее в <a href="https://github.com/ChaoticOnyx/OnyxBay/pull/3993">#3993</a>.</li>
+				<li class="bugfix">Исправлен альтернативный режим стрельбы лазеров.</li>
+			</ul>
+
+			<h2 class="date">12 December 2020</h2>
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В карго добавлены EVA RIG, Security RIG, AMI RIG, Medical RIG.</li>
+			</ul>
+
+			<h3 class="author">MrPersival updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">При попытке подключиться к полному серверу теперь должно выводиться сообщение.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Генокрад в стазисе больше не может перемещать биоструктуру.</li>
+				<li class="bugfix">Переключаемые способности генокрада больше не тратят химикаты, пока он находится в стазисе.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлено множество новых табличек.</li>
+				<li class="maptweak">Новые таблички добавлены на карту.</li>
+			</ul>
+
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена куча новых зажигалок, включая синдикатовскую в разделе Badassery и капитанскую в его каюте.</li>
+				<li class="tweak">Очередные оптимизации. Теперь точно должно быть меньше лагов. Немножечко.</li>
+			</ul>
+
 			<h2 class="date">7 December 2020</h2>
 			<h3 class="author">Epicus7 updated:</h3>
 			<ul class="changes bgimages16">
