--- a/html/changelog.html
+++ b/html/changelog.html
@@ -57,7 +57,7 @@
 			<ul class="changes bgimages16">
 				<li class="tweak">Изменена механика пакетиков для улик: теперь предмет нужно перетаскивать на пакетик, альтернативно можно кликнуть по пакетику предметом.</li>
 				<li class="rscadd">Добавлены пакетики для улик киборгам с детективным модулем.</li>
-				<li class="bugfix">Исправлен улучшенный сигналлер в интегральных схемах, тепреь он корректно работает с кириллицей.</li>
+				<li class="bugfix">Исправлен улучшенный сигналлер в интегральных схемах, теперь он корректно работает с кириллицей.</li>
 			</ul>
 
 			<h3 class="author">TatarTheBuilder updated:</h3>
