--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,49 @@
 </table>
 
 		<div class="commit sansserif">
+			<h2 class="date">25 February 2021</h2>
+			<h3 class="author">TobyThorne updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлена возможность открывать заблокированные контейнеры через альт+клик.</li>
+				<li class="maptweak">В окнах мостика Blast Doors заменены на Shutters.</li>
+				<li class="maptweak">Blast Doors на входах и Shutters в окнах закрываются отдельными кнопками.</li>
+				<li class="maptweak">Окно мостика теперь входит в зону мостика, а не коридора.</li>
+				<li class="bugfix">Исправлена невозможность передвижения за pAI.</li>
+			</ul>
+
+			<h3 class="author">kreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Для использования в картах добавлены три новых вида песчаных турфов и плитка в песке.</li>
+			</ul>
+
+			<h3 class="author">HentaiStorm updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена строки с координатами глазу ИИ в вкладку Status.</li>
+				<li class="tweak">Количество дерева и пластика у дронов увеличено в 10 раз.</li>
+				<li class="tweak">Возвращена айди карта для воксов. Кошелёк у Воксов теперь находится в кармане.</li>
+				<li class="tweak">Инструмент трейтора Fake Crew Announcement может оглашать любую профессию, со звуком оглашения аннонса при прибытии, так же добавлена verb переключения режима на оглашение/не оглашение аннонса.</li>
+			</ul>
+
+			<h3 class="author">kemperhun updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Масштабное обновление вирусов. Заинтересованным категорически рекомендуется ознакомиться со <a href="https://github.com/ChaoticOnyx/OnyxBay/pull/4099">страничкой на гитхабе</a>.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="wip">Тестовое добавление в билд новой локации и растительности для неё.</li>
+				<li class="wip">Фронтир доделан для публичного теста</li>
+				<li class="tweak">Убрана русская буква С в названии морга.</li>
+			</ul>
+
+			<h3 class="author">Tsurupeta updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="imageadd">Исправлены спрайты роб мага для тонкотрапов.</li>
+				<li class="rscadd">Вернул нормальную робу Марисы.</li>
+				<li class="bugfix">Теперь ненастоящие робы мага действительно не дают возможности магу кастовать.</li>
+				<li class="bugfix">Робы из карго теперь ненастоящие.</li>
+			</ul>
+
 			<h2 class="date">03 February 2021</h2>
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
@@ -474,7 +517,7 @@
 				<li class="maptweak">Переделаны бар и кухня.</li>
 				<li class="rscadd">Добавлен капитанский нагрудник.</li>
 			</ul>
-			
+
 			<h3 class="author">MalinaGirl updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="maptweak">Переработаны церковь и отбытие.</li>
@@ -1036,7 +1079,7 @@
 			<ul class="changes bgimages16">
 				<li class="rscadd">У наушников глав появился "командный режим". Включается по альт-клику.</li>
 			</ul>
-			
+
 			<h3 class="author">Epicus updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscdel">Ревёртнул свиней, ибо были добавлены без обоюдного согласия геймдизов.</li>
@@ -1047,7 +1090,7 @@
 				<li class="bugfix">Удалил уникальную возможность ломать мультитулом несуществующие замки на ящиках.</li>
 				<li class="rscadd">Добавил целый вагон как различных способов поджечь сигарету, так и потушить её.</li>
 			</ul>
-	
+
 			<h3 class="author">Shirlineyn updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Исправил возможность засовывать людей в слиперы и криокамеры за километр.</li>
